fixed footer positioning and page spacing

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,24 +1,18 @@
 @import url("palette.css");
-* {
+body {
     font-family: var(--fonts);
     box-sizing: border-box;
 }
 
-body,
-html {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-}
 
 .welcome {
+    min-height: 100vh;
     width: 100%;
-    height: 100%;
-    background-image: url(/images/homepage.png);
+    background-image: url(/images/homepage_terciary.jpg);
     position: relative;
-    background-position: center;
+    background-position: 0 0;
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: cover;
 }
 
 #navbar {
@@ -148,8 +142,9 @@ html {
 
 /* ---------------------------------------------------------------------------- */
 
-#explore {
-    box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.75);
+.explore {
+    height: 100%;
+    width: 100%;
 }
 
 #regions {
@@ -177,7 +172,6 @@ html {
 }
 
 .landscape > a img {
-    width: 19.90em;
     height: 12em;
     border-top-left-radius: 9px;
     border-top-right-radius: 9px;
